# devtools_scicomp_project_2025

./: .buildinfo  .gitignore  Makefile  README.md  genindex.html  index.html  matmul.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: main.yml
_modules/: index.html
_modules/matmul/: matmult.html
_sources/: modules.rst.txt
docs/: conf.py  index.rst  matmul.rst
experiments/: config.yaml  config_numpy.yaml  config_spambase.yaml  mem_prof_config.yaml  square_1024_matrices.yaml  square_2048_matrices.yaml  square_256_matrices.yaml  square_4096_matrices.yaml  square_512_matrices.yaml  square_8192_matrices.yaml
logs/: numpy_knn_classifier.txt  performance.csv  slow_knn_classifier.txt  spam_numba_knn_classifier.txt  spam_numpy_knn_classifier.txt
logs/ps1spl1/: mem_prof_rank_0.txt
logs/ps1spl2/: mem_prof_rank_0.txt
logs/ps1spl4/: mem_prof_rank_0.txt
logs/ps2spl1/: mem_prof_rank_0.txt  mem_prof_rank_1.txt
logs/ps2spl2/: mem_prof_rank_0.txt  mem_prof_rank_1.txt
logs/ps2spl4/: mem_prof_rank_0.txt  mem_prof_rank_1.txt
logs/ps4spl1/: mem_prof_rank_0.txt  mem_prof_rank_1.txt  mem_prof_rank_2.txt  mem_prof_rank_3.txt
logs/ps4spl2/: mem_prof_rank_0.txt  mem_prof_rank_1.txt  mem_prof_rank_2.txt  mem_prof_rank_3.txt
logs/ps4spl4/: mem_prof_rank_0.txt  mem_prof_rank_1.txt  mem_prof_rank_2.txt  mem_prof_rank_3.txt
scripts/: run.py
shell/: mem_prof.sh  perform.sh  submit.sh  submit_spam.sh
src/matmul/: matmult.cpp  matmult.py
src/pyclassify/: classifier.py  (+4 more)
test/: test_.py
