# Choosing a build backend:
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "MatrixMult"
version = "0.0.1"
description = "multiply two matrices in parallel with MPI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "lucam", email = "lmosconi@sissa.it" }]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "tests", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]